@@ -1,0 +1,67 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- NorthQ NQ-9021 Power Reader -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- COMMAND_CLASS_BASIC -->
+    <CommandClass id="32" getsupported="false"/>
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+        <Value type="short" index="1" genre="config" label="Pulse factor" units="pulses" min="1" max="65535" value="1024" size="2">
+            <Help>How many pulses are counted per 10 kWh.</Help>
+        </Value>
+        <Value type="list" index="2" genre="config" label="Sensor type" units="" min="0" max="2" value="2" size="1">
+            <Help>Defines the meter type on which the Power Reader is placed</Help>
+            <Item label="Pulse Meter" value="1"/>
+            <Item label="Rotating Wheel" value="2"/>
+        </Value>
+        <Value type="byte" index="3" genre="config" label="IR Listen period" units="" min="0" max="127" value="0">
+            <Help>
+                Additional time for feedback measurement.
+                Should always be 0.
+            </Help>
+        </Value>
+        <Value type="byte" index="4" genre="config" label="IR Pulse Width" units="" min="0" max="127" value="50">
+            <Help>
+                Adjusts transmit signal so received signal will in average be equal to this values.
+                Auto calibration might select another value than this.
+            </Help>
+        </Value>
+        <Value type="byte" index="5" genre="config" label="Poll / Wake up frequency" units="seconds" min="1" max="50" value="20">
+            <Help>
+                Wake device up this many times per second.
+                This value also controls number of measurements per second on mechanical meters.
+            </Help>
+        </Value>
+        <Value type="byte" index="6" genre="config" label="Pulse Threshold Low" units="" min="1" max="113" value="0" size="1">
+            <Help>Low detection threshold for wheel meters.</Help>
+        </Value>
+        <Value type="byte" index="7" genre="config" label="Pulse Threshold high" units="" min="1" max="113" value="5" size="1">
+            <Help>High detection threshold for wheel meters.</Help>
+        </Value>
+        <Value type="int" index="8" genre="config" label="Wake up interval" units="seconds" min="0" max="113" value="3" size="2" read_only="true">
+            <Help>Do not use. Set this value using WAKE_UP_INTERVAL_SET instead.</Help>
+        </Value>
+        <Value type="int" index="9" genre="config" label="Pulse count" units="" size="4" min="0" max="2147483647" value="0">
+            <Help>In order for the Power Reader to report the proper total meter consumption the value for this registered has to be initialized with total_meter_consumption_stated_on_the_meter * impulse factor.</Help>
+        </Value>
+        <Value type="short" index="10" genre="config" label="Keep alive period" units="second" size="2" min="0" max="32767" value="3">
+            <Help>set to the number of seconds that it will take the controlling node to send a response / request to the wake up notification</Help>
+        </Value>
+        <Value type="short" index="11" genre="config" label="Real-time mode" units="" size="2" min="0" max="32767" value="0" read_only="true">
+            <Help>Set this to enter real-time mode from remote. Contains seconds * poll frequency before going back to sleep. If you press the button once this value will be set.</Help>
+        </Value>
+        <Value type="int" index="12" genre="config" label="serial number" size="4" value="0" read_only="true">
+            <Help>The serial numbers written on the Power Reader are in HEX</Help>
+        </Value>
+        <Value type="list" index="13" genre="config" label="Debug" units="" min="0" max="1" value="1" size="1">
+            <Help>Debug Mode</Help>
+            <Item label="Off" value="0"/>
+            <Item label="LED blinks at pulse counting" value="1"/>
+        </Value>
+        <Value type="int" index="15" genre="config" label="Calibration status" size="4" value="0" read_only="true">
+            <Help>The calibration progress is calculated as (value[1] - 65 + value[2] / value[3]) * 25
+                The calibration is finished successfully when value[0] = 2 and value[2] = value[3].
+                The calibration has failed if value[0] != 1 OR (value[0] = 2 AND value[2] != value[3])
+            </Help>
+        </Value>
+    </CommandClass>
+</Product>
